.metadata/.plugins/org.eclipse.cdt.ui/tutorial_Test.build.log
14:57:19 **** Incremental Build of configuration Debug for project tutorial_Test ****
make -j20 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32L4S5xx -c -I../Core/Inc -I../Drivers/STM32L4xx_HAL_Driver/Inc -I../Drivers/STM32L4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32L4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:100:9: error: 'button_status' undeclared (first use in this function)
  100 |         button_status = HAL_GPIO_ReadPin(btn_GPIO_Port, btn_Pin);
      |         ^~~~~~~~~~~~~
../Core/Src/main.c:100:9: note: each undeclared identifier is reported only once for each function it appears in
../Core/Src/main.c:100:42: error: 'btn_GPIO_Port' undeclared (first use in this function)
  100 |         button_status = HAL_GPIO_ReadPin(btn_GPIO_Port, btn_Pin);
      |                                          ^~~~~~~~~~~~~
../Core/Src/main.c:100:57: error: 'btn_Pin' undeclared (first use in this function)
  100 |         button_status = HAL_GPIO_ReadPin(btn_GPIO_Port, btn_Pin);
      |                                                         ^~~~~~~
../Core/Src/main.c:102:30: error: 'led_GPIO_Port' undeclared (first use in this function)
  102 |            HAL_GPIO_WritePin(led_GPIO_Port, led_Pin, GPIO_PIN_SET);
      |                              ^~~~~~~~~~~~~
../Core/Src/main.c:102:45: error: 'led_Pin' undeclared (first use in this function)
  102 |            HAL_GPIO_WritePin(led_GPIO_Port, led_Pin, GPIO_PIN_SET);
      |                                             ^~~~~~~
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j20 all" terminated with exit code 2. Build might be incomplete.

14:57:19 Build Failed. 6 errors, 0 warnings. (took 302ms)

